--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "vim-colors-solarized"]
-    path = vim/bundle/vim-colors-solarized
-    url = git@github.com:altercation/vim-colors-solarized.git
 [submodule "nerdtree"]
     path = vim/bundle/nerdtree
     url = git@github.com:scrooloose/nerdtree.git
+[submodule "vim/bundle/colorschemes"]
+	path = vim/bundle/colorschemes
+	url = git@github.com:flazz/vim-colorschemes.git
