--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "vim/bundle/CamelCaseMotion"]
 	path = vim/bundle/CamelCaseMotion
 	url = git@github.com:bkad/CamelCaseMotion.git
+[submodule "base16-iterm2"]
+	path = base16-iterm2
+	url = git@github.com:chriskempson/base16-iterm2.git
